<resources>
    <string name="app_name">Teacher Assistant</string>
    <string name="addGroup">Dodaj zajęcia</string>
    <string name="lectureName">Nazwa przedmiotu</string>
    <string name="removeLecture">Usuń przedmiot</string>
    <string name="lectureNameAdd">Nazwa zajęć</string>
    <string name="lectureID">ID przedmiotu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="addStudent">Dodaj studenta</string>
    <string name="LectureName">Nazwa przedmiotu</string>
    <string name="addStudentId">Numer albumu</string>
    <string name="addStudentName">Imię studenta</string>
    <string name="addStudentLastName">Nazwisko studenta</string>
    <string-array name="possibleLectures">
        <item>programowanie</item>
        <item>siecikomputerowe</item>
        <item>inne</item>
    </string-array>
    <string name="studentName">Imię studenta</string>
    <string name="studentLastName">Nazwisko studenta</string>
    <string name="studentID">Numer albumu</string>
    <string name="students">Studenci</string>
    <string name="classes">Zajęcia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Data i godzina</string>
    <string name="timeStart">Godzina rozpoczęcia</string>
    <string name="timeEnd">Godzina zakończenia</string>
    <string-array name="daysOfWeek">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>
    <string name="details">Szczegóły</string>
    <string name="name">Nazwa zajęć</string>
    <string name="dayOfWeek">Dzień tygodnia</string>
    <string name="chooseDay">Wybierz dzień</string>
</resources>