<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_one_class"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/lectureNameSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:paddingTop="25dp"
        android:text="@string/LectureName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/garamond"
        android:layout_weight="1"
        android:textSize="40sp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/buttonAddStudent"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/addStudent"
        android:background="@null"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:textSize="20sp"
        android:fontFamily="@font/garamond"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/buttonRemoveLecture"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/removeLecture"
        android:background="@null"
        android:layout_gravity="center"
        android:layout_weight="0.4"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"
        android:fontFamily="@font/garamond"
        android:textColor="@color/white"/>



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/logo"
        />


</LinearLayout>